# SmartCalc

./: CMakeCache.txt  CMakeLists.txt  Makefile  arithmetics.c  arithmetics.h  build.mk  calculator.c  calculator.h  callbacks.c  callbacks.h  cmake_install.cmake  debug.c  debug.h  interface.c  interface.h  parse.c  parse.h  queue.c  queue.h  stack.c  stack.h  test.c  tests.check
bonus/credit/: credit.c  credit.h  credit_callbacks.c  credit_callbacks.h
bonus/deposit/: deposit.c  deposit.h  deposit_callbacks.h
modules/: graph_callbacks.h
src/: CMakeLists.txt  Makefile  my.mk  tests_s21_smart_calc.check
src/bonus/credit/: credit.c  credit.h  credit_callbacks.c  credit_callbacks.h
src/bonus/deposit/: deposit.c  deposit.h  deposit_callbacks.c  deposit_callbacks.h
src/gui/: graph.glade
src/modules/: arithmetics.c  arithmetics.h  calculator.c  calculator.h  callbacks.c  callbacks.h  debug.h  graph_callbacks.c  graph_callbacks.h  interface.c  interface.h  parse.c  parse.h  queue.c  queue.h  stack.c  stack.h
